<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:background="@color/gray"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Titulo"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgCapaDetalhe"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/txtTituloDetalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txtStatusDetalhe"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txtNotaDetalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txtComentarioDetalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="match_parent"
            android:backgroundTint="@color/red"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/Ecluir" />

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="115dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnVoltarDetalhe"
                android:layout_width="150dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/btn"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="Editar"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
